examples/test/testpolicy12457.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12457
  namespace: namespace302
spec:
  podSelector:
    matchLabels:
      key4: value47
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key16: value26
          key4: value46
          key22: value44
      podSelector:
        matchLabels:
          key27: value26
